welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:78: error: Unmatched closing brace '}' ignored here
}
^